<resources>
    <string name="app_name" translatable="false">Memora</string>
    <string name="skip">Skip</string>

    <string name="slide1_nadpis">Welcome to Memora</string>
    <string name="slide1_caption">Discover a new way to capture, share, and relive your most cherished memories. Our app allows you to easily document life\'s special moments, whether big or small, and share them with friends and family.</string>

    <string name="slide2_nadpis">What is your name?</string>
    <string name="slide2_caption" translatable="false"> </string>

    <string name="slide3_nadpis">Turn on notifications</string>
    <string name="slide3_caption">Receive notfications to get reminded about your anniversaries. We promise not to spam you.</string>

    <string name="slide4_nadpis">Almost there</string>
    <string name="slide4_caption">Allow access to your files. We value your privacy and handle your data with care.</string>


    <string name="enter_your_name">Enter your name</string>
    <string name="turn_on">Turn on</string>

    <string name="name">name</string>

    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="menu_milestones">Milestones</string>
    <string name="menu_moments">Moments</string>
    <string name="menu_capsules">Time capsules</string>
    <string name="menu_list" translatable="false">Bucket list</string>
    <string name="menu_memo">Memo notes</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_invite">Person invite</string>
    <string name="menu_settings">Settings</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="order">Order</string>

    <string name="delete_error">Nothing to delete!</string>
    <string name="edit_error">Nothing to edit!</string>
    <string name="reorder_error">Nothing to reorder!</string>
    <string name="share_error">Nothing to share!</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="sure">Are you sure?</string>
    <string name="choose_another">Choose another</string>

    <string name="welcome">Welcome! Glad to see you </string>
    <string name="choose_type">Choose type</string>
    <string name="select_the_date">Select the date</string>
    <string name="select_picture">Select picture</string>
    <string name="choose_participants">Who was with you?</string>
    <string name="save">Save</string>

    <string name="days">days</string>
    <string name="warning">Warning</string>
    <string name="unfilled">You left some fields unfilled</string>
    <string name="hi">Hi</string>
    <string name="todays_anniversaries">Todays anniversaries</string>
    <string name="upcoming_anniversary">Nearest anniversary</string>
    <string name="no_upcoming_anniversary">No anniversary</string>
    <string name="try_to_add">Try to add some milestone first</string>
    <string name="home">Home</string>
    <string name="success_reorder">Reordered successfully</string>

    <string name="change_name">Change name</string>
    <string name="change_language">Change language</string>
    <string name="milestone_anniversary_reminders">Milestone anniversary reminders</string>
    <string name="time_capsule_reminders">Time capsule reminders</string>
    <string name="turn_off_music">Turn off music</string>
    <string name="turn_on_music">Turn on music</string>
    <string name="allow_notify">Allow notifications for anniversary reminder</string>
    <string name="appwidget_text">"Next anniversary: "</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This widget tells you number of days until next anniversary</string>

    <string name="progress">Progress</string>
    <string name="active">ACTIVE</string>
    <string name="done">DONE</string>

    <string name="new_task">Add new tasks</string>
    <string name="success_delete">Item deleted successfully</string>
    <string name="about">About</string>

    <string name="author_zb">Author: Zuzana Baluchová</string>
    <string name="created_within_subject_vma">Created within subject VMA at PF UPJŠ</string>
    <string name="resources">Resources:</string>
    <string name="wallpaper_images">Wallpaper images:</string>
    <string name="icons">Icons:</string>
    <string name="vectors">Vectors:</string>
    <string name="source_code">Source code:</string>

    <string name="new_moment">New moment</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="select_place">Select place</string>
    <string name="add_tags">Add tags</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>