<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_milestones"
            android:icon="@drawable/ic_menu_milestones"
            android:title="@string/menu_milestones" />

        <item
            android:id="@+id/nav_moments"
            android:icon="@drawable/ic_menu_moments"
            android:title="@string/menu_moments" />
<!--
        <item
            android:id="@+id/nav_capsules"
            android:icon="@drawable/ic_menu_capsules"
            android:title="@string/menu_capsules" />
-->
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_memo"
            android:title="@string/menu_list" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/heart"
            android:title="@string/about" />

    </group>

</menu>