<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".milniky.crud.MilestonesAkcieActivity"
    android:padding="40dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/poadie_abstract">

    <Button
        android:id="@+id/bType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:hint="@string/choose_type"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/milestones_smaller"
        android:gravity="start|center_vertical"
        android:background="@drawable/button_milestones"
        />

    <Button
        android:id="@+id/bDate"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:hint="@string/select_the_date"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/calendar_smaller"
        android:gravity="start|center_vertical"
        android:background="@drawable/button_milestones"
        android:backgroundTint="@color/cervena_tmava_zosvetlena"/>

    <Button
        android:id="@+id/bPhoto"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:hint="@string/select_picture"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/moments_smaller"
        android:gravity="start|center_vertical"
        android:background="@drawable/button_milestones" />

    <Button
        android:id="@+id/bWho"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:hint="@string/choose_participants"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/person_smaller"
        android:gravity="start|center_vertical"
        android:background="@drawable/button_milestones"
        android:backgroundTint="@color/cervena_tmava_zosvetlena"/>

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="20dp"
        android:backgroundTint="@color/cervena_tmava"/>

</LinearLayout>