<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/poadie_abstract"
    tools:context=".moments.ui.AddTagActivity">

    <LinearLayout
        android:id="@+id/linearLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/borderbottom"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorner"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:padding="10dp"
            android:stateListAnimator="@null"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_tags"
            android:textSize="35sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutHeader">

        <Button
            android:id="@+id/bTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_milestones"
            android:drawableLeft="@drawable/milestones_smaller"
            android:gravity="start|center_vertical"
            android:hint="@string/title"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_milestones"
            android:drawableLeft="@drawable/pencil_smaller"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:hint="@string/notes"
            android:padding="7dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_milestones"
            android:drawableLeft="@drawable/moments_smaller"
            android:gravity="start|center_vertical"
            android:hint="@string/select_picture"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_milestones"
            android:backgroundTint="@color/cervena_tmava_zosvetlena"
            android:drawableLeft="@drawable/calendar_smaller"
            android:gravity="start|center_vertical"
            android:hint="@string/select_the_date"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_milestones"
            android:backgroundTint="@color/cervena_tmava_zosvetlena"
            android:drawableLeft="@drawable/map"
            android:gravity="start|center_vertical"
            android:hint="@string/select_place"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_milestones"
            android:backgroundTint="@color/cervena_tmava_zosvetlena"
            android:drawableLeft="@drawable/tag"
            android:gravity="start|center_vertical"
            android:hint="@string/add_tags"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/cervena_tmava"
            android:text="@string/save" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>